create a home page with html anmd css

--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/styel.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <nav class="navbar">
+        <div class="container">
+            <h1>Hello World</h1>
+        </div>
+    </nav>
+    <div class="container" id="form-container">
+        <form action="" method="">
+            <input type="text" name="task" placeholder="Enter your task">
+            <button type="submit">Create</button>
+        </form>
+    </div>
 </body>
+
 </html>
