changed the styling

--- a/templates/index.htm
+++ b/templates/index.htm
@@ -16,6 +16,7 @@
     </nav>
     <div class="container" id="form-container">
         <form action="" method="">
+            <label for="task">Task</label>
             <input type="text" name="task" placeholder="Enter your task">
             <button type="submit">Create</button>
         </form>
