--- a/static/styel.css
+++ b/static/styel.css
@@ -20,7 +20,7 @@ body {
 /* Navbar Styles */
 .navbar {
     width: 100%;
-    background-color: #007BFF;
+    background-color: #c300ff;
     color: white;
     padding: 15px 0;
 }
@@ -46,7 +46,15 @@ body {
     border-radius: 8px;
     width: 100%;
     max-width: 400px;
-    margin-top: 20px;
+    margin-top: 20%;
+    
+}
+label {
+    margin-bottom: 5px;
+    font-weight: bold;
+    font-size: 30px;
+    text-align: center;
+    color: #a200ff;
 }
 
 /* Form Styles */
@@ -65,7 +73,7 @@ input[type="text"] {
 
 button {
     padding: 10px;
-    background-color: #007BFF;
+    background-color: #7700ff;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -75,5 +83,5 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #5b08c9;
 }
