--- a/templates/index.htm
+++ b/templates/index.htm
@@ -11,12 +11,12 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <h1>Hello World</h1>
+            <h1>{{task}}</h1>
         </div>
     </nav>
     <div class="container" id="form-container">
         <form action="" method="">
-            <label for="task">Task</label>
+            <label for="task">WRITE TASK</label>
             <input type="text" name="task" placeholder="Enter your task">
             <button type="submit">Create</button>
         </form>
