--- a/static/styel.css
+++ b/static/styel.css
@@ -10,7 +10,7 @@
 /* Body Styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background: linear-gradient(to bottom left, #7700ff, #c300ff, #e100ff);
     color: #333;
     display: flex;
     flex-direction: column;
@@ -47,6 +47,7 @@ body {
     width: 100%;
     max-width: 400px;
     margin-top: 15%;
+    margin-bottom: 20%;
     
 }
 label {
