--- a/templates/index.htm
+++ b/templates/index.htm
@@ -21,6 +21,15 @@
             <button type="submit">Create</button>
         </form>
     </div>
+    <div class="container" id="task-container">
+        <ul>
+           {% for task in tasks %}
+            <li>{{task}}</li>
+            {% else %}
+            <p>No tasks to display</p>
+            {% endfor %}
+        </ul>
+        </div>
 </body>
 
 </html>
