--- a/templates/index.html
+++ b/templates/index.html
@@ -15,21 +15,27 @@
         </div>
     </nav>
     <div class="container" id="form-container">
-        <form action="" method="">
+        <form>
             <label for="task">WRITE TASK</label>
             <input type="text" name="task" placeholder="Enter your task">
+            <label for="description">DESCRIPTION</label>
+            <input type="text" name="description" placeholder="Enter your description">
+            <checkbox>
+                <label for="completed">DONE</label>
+                <input type="checkbox" name="completed">
+            </checkbox>
             <button type="submit">Create</button>
         </form>
     </div>
     <div class="container" id="task-container">
         <ul>
-           {% for task in tasks %}
+            {% for task in tasks %}
             <li>{{task}}</li>
             {% else %}
             <p>No tasks to display</p>
             {% endfor %}
         </ul>
-        </div>
+    </div>
 </body>
 
 </html>
