--- a/templates/index.html
+++ b/templates/index.html
@@ -11,19 +11,19 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <h1>{{task}}</h1>
+            <h1>{{ task }}</h1>
         </div>
     </nav>
     <div class="container" id="form-container">
-        <form action="{{url_for('create')}}" method="POST">
+        <form action="{{ url_for('create') }}" method="POST">
             <label for="task">WRITE TASK</label>
-            <input type="text" name="task" placeholder="Enter your task">
+            <input type="text" name="task" placeholder="Enter your task" required>
             <label for="description">DESCRIPTION</label>
-            <input type="text" name="description" placeholder="Enter your description">
-            <checkbox>
-                <label for="completed">DONE</label>
+            <input type="text" name="description" placeholder="Enter your description" required>
+            <div>
                 <input type="checkbox" name="completed">
-            </checkbox>
+                <label for="completed">DONE</label>
+            </div>
             <button type="submit">Create</button>
         </form>
     </div>
@@ -32,10 +32,19 @@
             {% for task in tasks %}
             <li>
                 <div class="task">
-                    <div class="task-id">Task__{{ task[0] }}</div>
-                    <div class="task-title">{{ task[1] }}</div>
-                    <div class="task-description">{{ task[2] }}</div>
-                    <div class="task-status">Status: {{ "Completed" if task[3] else "Pending" }}</div>
+                    <form method="POST" action="{{ url_for('update', id=task[0]) }}">
+                        <div class="task-id">Task ID: {{ task[0] }}</div>
+                        <div class="task-title"><input type="text" name="task" value="{{ task[1] }}" required></div>
+                        <div class="task-description"><input type="text" name="description" value="{{ task[2] }}" required></div>
+                        <div class="task-status">Status: {{ "Completed" if task[3] else "Pending" }}
+                            <input type="checkbox" name="done" {% if task[3] %}checked{% endif %}>
+                            <label for="done">Done</label>
+                        </div>
+                        <button type="submit">Update</button>
+                    </form>
+                    <form method="POST" action="{{ url_for('delete', id=task[0]) }}">
+                        <button type="submit">Delete</button>
+                    </form>
                 </div>
             </li>
             {% else %}
@@ -45,7 +54,6 @@
             {% endfor %}
         </ul>
     </div>
-
 </body>
 
 </html>
